Create chats screen

--- a/friends.html
+++ b/friends.html
@@ -66,12 +66,13 @@
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
           <span>친구 5</span>
+          <i class="fa-solid fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
           <div class="user-component__column">
             <div class="user-component__img user-component__img--sm">
               <img
-                src="https://pbs.twimg.com/media/FYcO51MUcAM3VEZ?format=jpg&name=small"
+                src="https://pbs.twimg.com/media/FdAyL3AakAEDB-8?format=jpg&name=large"
                 alt=""
                 class="user-component__avatar user-component__avatar--sm"
               />
