--- a/friends.html
+++ b/friends.html
@@ -28,13 +28,17 @@
       <h1 class="screen-header__title">친구</h1>
       <div class="screen-header__icons">
         <div class="screen-header__icons__icon">
-          <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+          <a href="find.html"
+            ><i class="fa-solid fa-magnifying-glass fa-lg"></i
+          ></a>
         </div>
         <div class="screen-header__icons__icon">
-          <i class="fa-solid fa-music fa-lg"></i>
+          <a href="https://newjeans.kr"
+            ><i class="fa-solid fa-cat fa-lg"></i
+          ></a>
         </div>
         <div class="screen-header__icons__icon">
-          <a href="settings.html"><i class="fa-solid fa-ellipsis fa-lg"></i></a>
+          <a href="more.html"><i class="fa-solid fa-ellipsis fa-lg"></i></a>
         </div>
       </div>
     </header>
@@ -225,12 +229,12 @@
           /></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"
+          <a class="nav__link" href="photos.html"
             ><img src="icons/photos.png" alt=""
           /></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html">
+          <a class="nav__link" href="settings.html">
             <img src="icons/settings.png" alt=""
           /></a>
         </li>
