--- a/find.html
+++ b/find.html
@@ -9,7 +9,7 @@
         background-image: url("css/backgrounds/bg-purple.png");
       }
     </style>
-    <title>Phoning - Photos</title>
+    <title>Phoning - Finds</title>
   </head>
 
   <body>
@@ -25,7 +25,7 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">더보기</h1>
+      <h1 class="screen-header__title">찾기</h1>
       <div class="screen-header__icons">
         <div class="screen-header__icons__icon">
           <a href="find.html"
@@ -43,60 +43,55 @@
       </div>
     </header>
 
-    <main class="main-screen more-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <div class="user-component__img user-component__img--xl">
-            <img
-              src="https://avatars.githubusercontent.com/u/95916780"
-              alt=""
-              class="user-component__avatar user-component__avatar--xl"
-            />
-          </div>
-          <div class="user-component__text">
-            <h4 class="user-component__title">현도</h4>
-            <span class="user-component__subtitle">
-              <a href="https://github.com/hyeond0/"
-                >https://github.com/hyeond0/</a
-              >
-            </span>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <i class="fa-solid fa-message fa-xl"></i>
-        </div>
-      </div>
-
+    <main class="main-screen">
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fa-solid fa-calendar"></i>
-          <span>달력</span>
+          <i class="fa-solid fa-qrcode"></i>
+          <span> QR Code</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-smile-beam"></i>
-          <span>이모티콘</span>
+          <i class="fa-solid fa-address-book"></i>
+          <span>Add by Contacts</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-paint-roller"></i><span>테마</span>
+          <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-file-invoice-dollar"></i><span>계좌</span>
+          <i class="fa-regular fa-envelope"></i><span>Invite</span>
         </div>
       </div>
-      <div class="more-suggestions">
-        <h4 class="more-suggestions__title">추천</h4>
-        <div class="more-suggestions__icons">
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fa-solid fa-quote-left fa-xl"></i>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4 class="open-chat__title">Open Chat</h4>
+          <span
+            >Go to Openchat Home<i class="fa-solid fa-chevron-right fa-xs"></i>
+          </span>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#BTS</h5>
+            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <div class="open-post__members">
+              <img src="https://avatars.githubusercontent.com/u/95916780" />
+              <span class="open-post__members-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__members-status">Active</span>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fa-solid fa-gamepad fa-xl"></i>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://w.namu.la/s/912bde0c4a0b2e7be286896a157e86968e1a1ae608278451f7a6f6f10cb86f537e7e334d71237ec6052808d189b8586f61b4afa8e4d301dbeb7cc45d774a72a1c4bd37f5410224f524eb5f7a8d2001a402beb17a3321259bdf6a206184999a4c"
+                alt=""
+              />
+              <div class="open-post__heart-count">
+                <i class="fa-solid fa-heart"></i><span>326</span>
+              </div>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Game</span>
           </div>
         </div>
       </div>
