Create chat screen

--- a/chats.html
+++ b/chats.html
@@ -60,7 +60,7 @@
                   alt=""
                 />
               </h4>
-              <h6 class="user-component__subtitle chat_subtitle">레고레고~</h6>
+              <h6 class="user-component__subtitle chat_subtitle">뭐야..?</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -91,110 +91,103 @@
           </div>
           <div class="user-component__column">
             <span class="user-component__time">2023. 01. 12.</span>
-            <div class="badge">8</div>
+            <div class="badge">2</div>
           </div>
         </div></a
       >
-      <a href="chat.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <div class="user-component__img user-component__img__xl">
-              <img
-                src="https://pbs.twimg.com/media/FdAyL3AakAEDB-8?format=jpg&name=large"
+      <div class="user-component">
+        <div class="user-component__column">
+          <div class="user-component__img user-component__img__xl">
+            <img
+              src="https://pbs.twimg.com/media/FdAyL3AakAEDB-8?format=jpg&name=large"
+              alt=""
+              class="user-component__avatar user-component__avatar__xl"
+            />
+          </div>
+          <div class="user-component__text">
+            <h4 class="user-component__title chat_title">민지</h4>
+            <h6 class="user-component__subtitle chat_subtitle">
+              Bye<img
+                class="chat_image"
+                src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/sparkling-heart_1f496.png"
                 alt=""
-                class="user-component__avatar user-component__avatar__xl"
-              />
-            </div>
-            <div class="user-component__text">
-              <h4 class="user-component__title chat_title">민지</h4>
-              <h6 class="user-component__subtitle chat_subtitle">
-                Bye<img
-                  class="chat_image"
-                  src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/sparkling-heart_1f496.png"
-                  alt=""
-                /><img
-                  class="chat_image"
-                  src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/sparkling-heart_1f496.png"
-                  alt=""
-                />
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">2023. 01. 11.</span>
-          </div>
-        </div></a
-      >
-      <a href="chat.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <div class="user-component__img user-component__img__xl">
-              <img
-                src="https://pbs.twimg.com/media/FYcO5J8UYAE8wh1?format=jpg&name=medium"
+              /><img
+                class="chat_image"
+                src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/sparkling-heart_1f496.png"
                 alt=""
-                class="user-component__avatar user-component__avatar__xl"
               />
-            </div>
-            <div class="user-component__text">
-              <h4 class="user-component__title chat_title">하니</h4>
-              <h6 class="user-component__subtitle chat_subtitle">
-                응 바꾸게 ㅎㅎ
-              </h6>
-            </div>
+            </h6>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">2023. 01. 11.</span>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">2023. 01. 11.</span>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <div class="user-component__img user-component__img__xl">
+            <img
+              src="https://pbs.twimg.com/media/FYcO5J8UYAE8wh1?format=jpg&name=medium"
+              alt=""
+              class="user-component__avatar user-component__avatar__xl"
+            />
           </div>
-        </div></a
-      >
-      <a href="chat.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <div class="user-component__img user-component__img__xl">
-              <img
-                src="https://pbs.twimg.com/media/FYcO5J1UEAE7evK?format=jpg&name=medium"
-                alt=""
-                class="user-component__avatar user-component__avatar__xl"
-              />
-            </div>
-            <div class="user-component__text">
-              <h4 class="user-component__title chat_title">
-                혜인!<img
-                  src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/front-facing-baby-chick_1f425.png"
-                  alt=""
-                />
-              </h4>
-              <h6 class="user-component__subtitle chat_subtitle">
-                사진을 보냈어요.
-              </h6>
-            </div>
+          <div class="user-component__text">
+            <h4 class="user-component__title chat_title">하니</h4>
+            <h6 class="user-component__subtitle chat_subtitle">
+              응 바꾸게 ㅎㅎ
+            </h6>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">2023. 01. 11.</span>
-          </div>
-        </div></a
-      >
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">2023. 01. 11.</span>
+        </div>
+      </div>
 
-      <a href="chat.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <div class="user-component__img user-component__img__xl">
-              <img
-                src="https://pbs.twimg.com/media/FYcO5J6VEAAARSb?format=jpg&name=medium"
+      <div class="user-component">
+        <div class="user-component__column">
+          <div class="user-component__img user-component__img__xl">
+            <img
+              src="https://pbs.twimg.com/media/FYcO5J1UEAE7evK?format=jpg&name=medium"
+              alt=""
+              class="user-component__avatar user-component__avatar__xl"
+            />
+          </div>
+          <div class="user-component__text">
+            <h4 class="user-component__title chat_title">
+              혜인!<img
+                src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/front-facing-baby-chick_1f425.png"
                 alt=""
-                class="user-component__avatar user-component__avatar__xl"
               />
-            </div>
-            <div class="user-component__text">
-              <h4 class="user-component__title chat_title">해린</h4>
-              <h6 class="user-component__subtitle chat_subtitle">&gt;&lt;</h6>
-            </div>
+            </h4>
+            <h6 class="user-component__subtitle chat_subtitle">
+              사진을 보냈어요.
+            </h6>
           </div>
-          <div class="user-component__column">
-            <span class="user-component__time">2023. 01. 09</span>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">2023. 01. 11.</span>
+        </div>
+      </div>
+
+      <div class="user-component">
+        <div class="user-component__column">
+          <div class="user-component__img user-component__img__xl">
+            <img
+              src="https://pbs.twimg.com/media/FYcO5J6VEAAARSb?format=jpg&name=medium"
+              alt=""
+              class="user-component__avatar user-component__avatar__xl"
+            />
           </div>
-        </div></a
-      >
+          <div class="user-component__text">
+            <h4 class="user-component__title chat_title">해린</h4>
+            <h6 class="user-component__subtitle chat_subtitle">&gt;&lt;</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">2023. 01. 09</span>
+        </div>
+      </div>
     </main>
 
     <nav class="nav">
