--- a/more.html
+++ b/more.html
@@ -73,7 +73,7 @@
           <span>달력</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-smile-beam"></i>
+          <i class="fa-regular fa-face-smile"></i>
           <span>이모티콘</span>
         </div>
         <div class="icon-row__icon">
