Update More page

--- a/chat.html
+++ b/chat.html
@@ -27,9 +27,7 @@
     <header class="chat-header">
       <div class="chat-header__column">
         <div>
-          <a href="javascript:history.back();"
-            ><i class="fa-solid fa-angle-left fa-xl"></i
-          ></a>
+          <a href="chats.html"><i class="fa-solid fa-angle-left fa-xl"></i></a>
         </div>
         <img
           src="https://talkimg.imbc.com/TVianUpload/tvian/TViews/image/2022/08/08/dc0a7664-93fe-403e-8e12-f3066589a988.JPEG"
@@ -51,27 +49,33 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">2023년 1월 11일 (수)</div>
+      <div class="chat__timestamp">2023년 1월 14일 (토)</div>
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">혹시 홍대가려면..</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">11:27</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/95916780" alt="" />
+        <img
+          src="https://pbs.twimg.com/media/FdAyL3AakAEDB-8?format=jpg&name=large"
+          alt=""
+        />
         <div class="message-row__content">
           <span class="message__author">민지</span>
           <div class="message__info">
             <p class="message__bubble">뉴진스의 하입보이요~^^</p>
-            <span class="message__time">21:27</span>
+            <span class="message__time">11:28</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/95916780" alt="" />
+        <img
+          src="https://pbs.twimg.com/media/FYcO5J6VEAAARSb?format=jpg&name=medium"
+          alt=""
+        />
         <div class="message-row__content">
           <span class="message__author">해린</span>
           <div class="message__info">
@@ -81,12 +85,15 @@
               You're my chemical <br />
               hype boy <br />
             </p>
-            <span class="message__time">21:27</span>
+            <span class="message__time">11:30</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/95916780" alt="" />
+        <img
+          src="https://pbs.twimg.com/media/FYcO5J3UcAAgjG5?format=jpg&name=medium"
+          alt=""
+        />
         <div class="message-row__content">
           <span class="message__author">다니엘</span>
           <div class="message__info">
@@ -96,12 +103,15 @@
               Hype boy 너만 원해<br />
               Hype boy 내가 전해<br />
             </p>
-            <span class="message__time">21:27</span>
+            <span class="message__time">11:48</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/95916780" alt="" />
+        <img
+          src="https://pbs.twimg.com/media/FYcO5J8UYAE8wh1?format=jpg&name=medium"
+          alt=""
+        />
         <div class="message-row__content">
           <span class="message__author">하니</span>
           <div class="message__info">
@@ -112,12 +122,15 @@
               Take him to the sky <br />
               You know I hype you boy <br />
             </p>
-            <span class="message__time">21:27</span>
+            <span class="message__time">12:16</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/95916780" alt="" />
+        <img
+          src="https://pbs.twimg.com/media/FYcO5J1UEAE7evK?format=jpg&name=medium"
+          alt=""
+        />
         <div class="message-row__content">
           <span class="message__author">혜인</span>
           <div class="message__info">
@@ -128,7 +141,7 @@
               Take him to the sky <br />
               You know I hype you boy <br />
             </p>
-            <span class="message__time">21:27</span>
+            <span class="message__time">13:02</span>
           </div>
         </div>
       </div>
@@ -136,7 +149,7 @@
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">뭐야..?</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">13:57</span>
           </div>
         </div>
       </div>
@@ -144,16 +157,22 @@
 
     <form class="reply" action="">
       <div class="reply__column">
-        <i class="fa-regular fa-square-plus fa-lg"></i>
+        <i class="fa-solid fa-plus fa-xl"></i>
       </div>
       <div class="reply__column">
-        <input type="text" placeholder="Write a message..." />
+        <input type="text" placeholder="메시지를 입력해 주세요." />
         <i class="fa-regular fa-face-smile"></i>
         <button>
           <i class="fa-solid fa-arrow-up"></i>
         </button>
       </div>
     </form>
+
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
