--- a/find.html
+++ b/find.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        background-image: url("css/backgrounds/bg-purple.png");
+        background-image: url("css/backgrounds/bg-pink.png");
       }
     </style>
     <title>Phoning - Finds</title>
@@ -47,34 +47,34 @@
       <div class="icon-row">
         <div class="icon-row__icon">
           <i class="fa-solid fa-qrcode"></i>
-          <span> QR Code</span>
+          <span> QR 코드</span>
         </div>
         <div class="icon-row__icon">
           <i class="fa-solid fa-address-book"></i>
-          <span>Add by Contacts</span>
+          <span>연락처로 추가</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
+          <i class="fa-regular fa-id-card"></i><span>ID로 추가</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-envelope"></i><span>Invite</span>
+          <i class="fa-regular fa-envelope"></i><span>초대</span>
         </div>
       </div>
       <div class="recommended-friends">
-        <h6 class="recommended-friends__title">Recommended Friends</h6>
-        <span>You have no recommended friends.</span>
+        <h6 class="recommended-friends__title">추천 친구</h6>
+        <span>추천 친구가 없습니다.</span>
       </div>
       <div class="open-chat">
         <div class="open-chat__header">
-          <h4 class="open-chat__title">Open Chat</h4>
+          <h4 class="open-chat__title">오픈 채팅</h4>
           <span
-            >Go to Openchat Home<i class="fa-solid fa-chevron-right fa-xs"></i>
+            >홈으로 가기<i class="fa-solid fa-chevron-right fa-xs"></i>
           </span>
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">뉴진스</h5>
+            <h6 class="open-post__hashtags">#NewJeans#OMG#friends</h6>
             <div class="open-post__members">
               <img src="https://avatars.githubusercontent.com/u/95916780" />
               <span class="open-post__members-count">802 members</span>
@@ -85,7 +85,7 @@
           <div class="open-post__column">
             <div class="open-post__photo">
               <img
-                src="https://w.namu.la/s/912bde0c4a0b2e7be286896a157e86968e1a1ae608278451f7a6f6f10cb86f537e7e334d71237ec6052808d189b8586f61b4afa8e4d301dbeb7cc45d774a72a1c4bd37f5410224f524eb5f7a8d2001a402beb17a3321259bdf6a206184999a4c"
+                src="https://image.bugsm.co.kr/album/images/500/40780/4078016.jpg"
                 alt=""
               />
               <div class="open-post__heart-count">
@@ -121,6 +121,12 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
