--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        background-image: url("css/backgrounds/bg-yellow.png");
+        background-image: url("css/backgrounds/bg-aqua.png");
       }
     </style>
     <title>Phoning - Friends</title>
@@ -240,6 +240,12 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
