--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
       <input type="submit" value="로그인/회원가입" />
     </form>
 
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
       crossorigin="anonymous"
