--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        background-image: url("css/backgrounds/bg-purple.png");
+        background-image: url("css/backgrounds/bg-blue.png");
       }
     </style>
     <title>Phoning - Photos</title>
@@ -108,6 +108,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
