--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        background-image: url("css/backgrounds/bg-aqua.png");
+        background-image: url("css/backgrounds/bg-yellow.png");
       }
     </style>
     <title>Phoning - Chats</title>
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">03:09</span>
+            <span class="user-component__time">13:57</span>
           </div>
         </div></a
       >
@@ -214,6 +214,12 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
