--- a/photos.html
+++ b/photos.html
@@ -115,6 +115,12 @@
       </ul>
     </nav>
 
+    <div class="no-mobile">
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/95f398b1ca.js"
       crossorigin="anonymous"
