Create chat with daniel page

--- a/chats.html
+++ b/chats.html
@@ -68,7 +68,7 @@
           </div>
         </div></a
       >
-      <a href="chat.html">
+      <a href="chat-daniel.html">
         <div class="user-component">
           <div class="user-component__column">
             <div class="user-component__img user-component__img__xl">
