--- a/find.html
+++ b/find.html
@@ -46,18 +46,29 @@
     <main class="main-screen">
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fa-solid fa-qrcode"></i>
+          <div class="more__icons">
+            <i class="fa-solid fa-qrcode"></i>
+          </div>
           <span> QR 코드</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-solid fa-address-book"></i>
+          <div class="more__icons">
+            <i class="fa-solid fa-address-book"></i>
+          </div>
+
           <span>연락처로 추가</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-id-card"></i><span>ID로 추가</span>
+          <div class="more__icons">
+            <i class="fa-regular fa-id-card"></i>
+          </div>
+          <span>ID로 추가</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-envelope"></i><span>초대</span>
+          <div class="more__icons">
+            <i class="fa-regular fa-envelope"></i>
+          </div>
+          <span>초대</span>
         </div>
       </div>
       <div class="recommended-friends">
