--- a/friends.html
+++ b/friends.html
@@ -43,9 +43,15 @@
       </div>
     </header>
 
-    <a href="" class="friends-display-link">
+    <a href="#" class="friends-display-link">
       <i class="fa-solid fa-circle-info"></i>
-      <span class="friends-display-link__text">Friends' Names Display</span>
+      <span class="friends-display-link__text"
+        >구독권이 필요해요!
+        <img
+          src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/raising-hands_1f64c.png"
+          alt=""
+        />
+      </span>
       <i class="fa-solid fa-chevron-right fa-xs"></i
     ></a>
 
