--- a/photos.html
+++ b/photos.html
@@ -51,40 +51,50 @@
             src="https://i.pinimg.com/736x/ef/60/06/ef60067735244c8c611190fa05cadc72.jpg"
             alt=""
           />
-          <span>해린 HAERIN</span>
+          <span class="photo-screen__new"
+            >해린 HAERIN<span class="red__dot"></span
+          ></span>
         </div>
         <div class="photo-screen__object">
           <img
             src="http://file3.instiz.net/data/cached_img/upload/2022/08/05/22/078909bea0abe8329bf710e0221dd016.jpg"
             alt=""
           />
-          <span>민지 MINJI</span>
+          <span class="photo-screen__new"
+            >민지 MINJI<span class="red__dot"></span
+          ></span>
         </div>
         <div class="photo-screen__object">
           <img src="https://pbs.twimg.com/media/FYcP2ZxUYAM1Af_.jpg" alt="" />
-          <span>다니엘 DANIEL</span>
+          <span class="photo-screen__new"
+            >다니엘 DANIEL<span class="red__dot red__dot__x"></span
+          ></span>
         </div>
       </div>
       <div class="photo-screen__column">
         <div class="photo-screen__object">
           <img src="https://pbs.twimg.com/media/FZ4FuL_aQAMVoVi.jpg" alt="" />
-          <span>하니 HANI</span>
+          <span class="photo-screen__new"
+            >하니 HANI<span class="red__dot red__dot__x"></span
+          ></span>
         </div>
         <div class="photo-screen__object">
           <img
             src="https://pbs.twimg.com/media/FYM20oQVUAEkyB2?format=jpg&name=large"
             alt=""
           />
-          <span
+          <span class="photo-screen__new"
             >NewJeans<img
               src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/325/jeans_1f456.png"
               alt=""
-              class
-          /></span>
+              class /><span class="red__dot red__dot__x"></span
+          ></span>
         </div>
         <div class="photo-screen__object">
           <img src="https://pbs.twimg.com/media/FYcPNpyUYAAVWRv.jpg" alt="" />
-          <span>혜인 HYEIN</span>
+          <span class="photo-screen__new"
+            >혜인 HYEIN<span class="red__dot red__dot__x"></span
+          ></span>
         </div>
       </div>
       <div class="photo-screen__column"></div>
