--- a/settings.html
+++ b/settings.html
@@ -110,7 +110,9 @@
     </nav>
 
     <div class="no-mobile">
-      <span>Your screen is too big!</span>
+      <div>
+        <span>화면 크기를 줄여주세요!</span>
+      </div>
     </div>
 
     <script
