update body image

--- a/friends.html
+++ b/friends.html
@@ -4,15 +4,11 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-image: url("css/backgrounds/bg-aqua.png");
-      }
-    </style>
+    <style></style>
     <title>Phoning - Friends</title>
   </head>
 
-  <body>
+  <body class="friends-screen__body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>5:16</span>
