--- a/chats.html
+++ b/chats.html
@@ -4,14 +4,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-image: url("css/backgrounds/bg-yellow.png");
-      }
-    </style>
+    <style></style>
     <title>Phoning - Chats</title>
   </head>
-  <body>
+  <body class="chat-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>5:16</span>
