--- a/find.html
+++ b/find.html
@@ -4,15 +4,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-image: url("css/backgrounds/bg-pink.png");
-      }
-    </style>
     <title>Phoning - Finds</title>
   </head>
 
-  <body>
+  <body class="find-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>5:16</span>
