--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </header>
 
-    <form action="friends.html" method="get" class="login-form">
+    <form action="splash-screen.html" method="get" class="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="로그인/회원가입" />
